--- a/conf/modules.config
+++ b/conf/modules.config
@@ -178,6 +178,13 @@
             ]
         }
 
+        // LIBRARIES 
+        withName: "SEQUENCE_LIBRARY" {
+            ext.prefix = { "${meta.id}" }
+            ext.args   = { "-method proba_pair" }
+        }
+
+
         //
         // Alignment evaluation
         //
