--- a/conf/modules.config
+++ b/conf/modules.config
@@ -180,8 +180,13 @@
 
         // LIBRARIES 
         withName: "SEQUENCE_LIBRARY" {
-            ext.prefix = { "${meta.id}" }
+            ext.prefix = { "${meta.id}_sequence" }
             ext.args   = { "-method proba_pair" }
+        }
+
+        withName: "SAP_LIBRARY" {
+            ext.prefix = { "${meta.id}_sap" }
+            ext.args   = { "-method sap_pair" }
         }
 
 
