--- a/conf/modules.config
+++ b/conf/modules.config
@@ -189,6 +189,15 @@
             ext.args   = { "-method sap_pair" }
         }
 
+        withName: "TMALIGN_LIBRARY" {
+            ext.prefix = { "${meta.id}_tmalign" }
+            ext.args   = { "-method TMalign_pair" }
+        }
+        
+        withName: "FOLDSEEK_LALIGN_LIBRARY"{
+            ext.prefix = { "${meta.id}_fslalign" }
+            ext.args   = { "-method fs_lalign_id_pair -template_file SELF_E_ -template_dir_E_ ." }
+        }
 
         //
         // Alignment evaluation
