--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,9 @@ params {
     // Alignment
     build_consensus             = false
 
+    // Libraries
+    matrix_3di                  = "${projectDir}/data/3di.mat"
+
     // Stats
     skip_stats                  = false
     calc_sim                    = false
