--- a/conf/modules.config
+++ b/conf/modules.config
@@ -196,7 +196,7 @@
         
         withName: "FOLDSEEK_LALIGN_LIBRARY"{
             ext.prefix = { "${meta.id}_fslalign" }
-            ext.args   = { "-method fs_lalign_id_pair -template_file SELF_E_ -template_dir_E_ ." }
+            ext.args   = { "-method fs_lalign_id_pair -template_file SELF_E_ -template_dir_E_ ${meta.id}_fs" }
         }
 
         //
