--- a/conf/base.config
+++ b/conf/base.config
@@ -14,8 +14,8 @@ process {
     memory = { check_max( 6.GB * task.attempt, 'memory' ) }
     time   = { check_max( 4.h  * task.attempt, 'time'   ) }
 
-    errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
-    maxRetries    = 1
+    errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'ignore' }
+    maxRetries    = 5
     maxErrors     = '-1'
 
     // Process-specific resource requirements
@@ -44,6 +44,34 @@ process {
         memory = { check_max( 14.GB * task.attempt, 'memory'  ) }
         time   = { check_max( 16.h  * task.attempt, 'time'    ) }
     }
+
+    withLabel:"small" {
+        cpus   = { check_max( 4    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 4.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:"medium" {
+        cpus   = { check_max( 8    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 12.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:"large" {
+        cpus   = { check_max( 16    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 14.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 16.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:"xlarge" {
+        cpus   = { check_max( 32    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 28.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 32.h  * task.attempt, 'time'    ) }
+    }
+    withLabel:"huge" {
+        cpus   = { check_max( 64    * task.attempt, 'cpus'    ) }
+        memory = { check_max( 56.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 64.h  * task.attempt, 'time'    ) }
+    }
+
+
     withLabel:process_long {
         time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
