--- a/conf/modules.config
+++ b/conf/modules.config
@@ -74,6 +74,7 @@
                     meta.args_tree ? "args: ${meta.args_tree}" : ""
                 ].join(' ').trim()
             }
+            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
             publishDir = [
@@ -90,6 +91,7 @@
                     meta.args_tree ? "args: ${meta.args_tree}" : ""
                 ].join(' ').trim()
             }
+            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args   = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
             publishDir = [
@@ -106,6 +108,7 @@
                     meta.args_tree ? "args: ${meta.args_tree}" : ""
                 ].join(' ').trim()
             }
+            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args   = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
             publishDir = [
@@ -131,6 +134,7 @@
                     meta.args_aligner ? "args: ${meta.args_aligner}" : ""
                 ].join(' ').trim()
             }
+            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}_${meta.aligner}-args-${meta.args_aligner_clean}" }
             ext.args = { "${meta.args_aligner}" == "null" ? '' : "${meta.args_aligner}" }
             if(params.skip_compression){
@@ -151,6 +155,7 @@
                     meta.args_aligner ? "args: ${meta.args_aligner}" : ""
                 ].join(' ').trim()
             }
+            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}_${meta.aligner}-args-${meta.args_aligner_clean}" }
             ext.args = { "${meta.args_aligner}" == "null" ? '' : "${meta.args_aligner}" }
             if(params.skip_compression){
