--- a/conf/modules.config
+++ b/conf/modules.config
@@ -68,12 +68,7 @@
         //
 
         withName: "FAMSA_GUIDETREE" {
-            tag = {
-                [
-                    "${meta.id}",
-                    meta.args_tree ? "args: ${meta.args_tree}" : ""
-                ].join(' ').trim()
-            }
+            tag = { "${meta.id} args:${meta.args_tree}" }
             label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
@@ -85,12 +80,7 @@
         }
 
         withName: "CLUSTALO_GUIDETREE" {
-            tag = {
-                [
-                    "${meta.id}",
-                    meta.args_tree ? "args: ${meta.args_tree}" : ""
-                ].join(' ').trim()
-            }
+            tag = { "${meta.id} args:${meta.args_tree}" }
             label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args   = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
@@ -102,12 +92,7 @@
         }
 
         withName: "MAGUS_GUIDETREE" {
-            tag = {
-                [
-                    "${meta.id}",
-                    meta.args_tree ? "args: ${meta.args_tree}" : ""
-                ].join(' ').trim()
-            }
+            tag = { "${meta.id} args:${meta.args_tree}" }
             label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}" }
             ext.args   = { "${meta.args_tree}" == "null" ? '' : "${meta.args_tree}" }
@@ -125,16 +110,17 @@
         withName: "CREATE_TCOFFEETEMPLATE" {
             ext.prefix = { "${meta.id}" }
         }
+
+
         withName: "CLUSTALO_ALIGN|FAMSA_ALIGN|FOLDMASON_EASYMSA|KALIGN_ALIGN|LEARNMSA_ALIGN|MAFFT|MAGUS_ALIGN|MUSCLE5_SUPER5|REGRESSIVE|TCOFFEE_ALIGN|TCOFFEE3D_ALIGN|UPP_ALIGN" {
-            tag = {
-                [
-                    "${meta.id}",
-                    meta.tree ? "tree: ${meta.tree}" : "",
-                    meta.args_tree ? "argstree: ${meta.args_tree}" : "",
-                    meta.args_aligner ? "args: ${meta.args_aligner}" : ""
-                ].join(' ').trim()
-            }
-            label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
+            tag = { "${meta.id} args:${meta.args_tree}" }
+
+
+            cpus   = { check_max( 2     * task.attempt, 'cpus'    ) }
+            memory = { check_max( 1 MB  * task.attempt, 'memory'  ) }
+            time   = { check_max( 8.h   * task.attempt, 'time'    ) }
+            
+
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}_${meta.aligner}-args-${meta.args_aligner_clean}" }
             ext.args = { "${meta.args_aligner}" == "null" ? '' : "${meta.args_aligner}" }
             if(params.skip_compression){
@@ -146,15 +132,9 @@
             }
         }
 
+
         withName: "MTMALIGN_ALIGN" {
-            tag = {
-                [
-                    "${meta.id}",
-                    meta.tree ? "tree: ${meta.tree}" : "",
-                    meta.args_tree ? "argstree: ${meta.args_tree}" : "",
-                    meta.args_aligner ? "args: ${meta.args_aligner}" : ""
-                ].join(' ').trim()
-            }
+            tag = { "${meta.id} args:${meta.args_tree}" }
             label =  {"${meta.size}" ? '${meta.size}' : "process_medium"} 
             ext.prefix = { "${meta.id}_${meta.tree}-args-${meta.argstree_clean}_${meta.aligner}-args-${meta.args_aligner_clean}" }
             ext.args = { "${meta.args_aligner}" == "null" ? '' : "${meta.args_aligner}" }
