--- a/nextflow.config
+++ b/nextflow.config
@@ -246,7 +246,7 @@ report {
 trace {
     enabled = true
     file    = "${params.outdir}/pipeline_info/execution_trace_${trace_timestamp}.txt"
-    fields = 'task_id, hash,native_id,name,status,exit,realtime,%cpu,rss,peak_rss,vmem,peak_vmem,rchar,wchar,cpus,start'
+    fields = 'task_id,hash,native_id,process,tag,name,status,exit,module,container,cpus,time,disk,memory,attempt,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,rchar,wchar,cpus,start,cpu_model'
 }
 dag {
     enabled = true
