--- a/conf/modules.config
+++ b/conf/modules.config
@@ -182,23 +182,52 @@
         withName: "SEQUENCE_LIBRARY" {
             ext.prefix = { "${meta.id}_sequence" }
             ext.args   = { "-method proba_pair" }
+            publishDir = [
+                path: { "${params.outdir}/libraries/${meta.id}" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
         }
 
         withName: "SAP_LIBRARY" {
             ext.prefix = { "${meta.id}_sap" }
             ext.args   = { "-method sap_pair" }
+            publishDir = [
+                path: { "${params.outdir}/libraries/${meta.id}" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
         }
 
         withName: "TMALIGN_LIBRARY" {
             ext.prefix = { "${meta.id}_tmalign" }
             ext.args   = { "-method TMalign_pair" }
+            publishDir = [
+                path: { "${params.outdir}/libraries/${meta.id}" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
         }
         
         withName: "FOLDSEEK_LALIGN_LIBRARY"{
             ext.prefix = { "${meta.id}_fslalign" }
             ext.args   = { "-method fs_lalign_id_pair -template_file SELF_E_ -template_dir_E_ ${meta.id}_fs" }
+            publishDir = [
+                path: { "${params.outdir}/libraries/${meta.id}" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
         }
 
+        withName: "FOLDSEEK_FULL_LIBRARY"{
+            ext.prefix = { "${meta.id}_foldseek_full" }
+            publishDir = [
+                path: { "${params.outdir}/libraries/${meta.id}" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        
         //
         // Alignment evaluation
         //
