--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
     build_consensus             = false
 
     // Libraries
-    matrix_3di                  = "${projectDir}/data/3di.mat"
+    matrix_3di                  = "${projectDir}/assets/3di.mat"
 
     // Stats
     skip_stats                  = false
